--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -1,12 +1,11 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
-  name: aws-tls-secret
-  namespace: weather
+  name: {{ .Release.Name }}-aws-tls-secret
 spec:
   provider: aws
   secretObjects:
-    - secretName: tls-secret
+    - secretName: {{ .Values.secret.secretName }}
       type: kubernetes.io/tls
       data:
         - objectName: tls.crt
@@ -15,5 +14,5 @@ spec:
           key: tls.key
   parameters:
     objects: |
-      - objectName: "tls-secret"
+      - objectName: "{{ .Values.secret.secretsManagerObjectName }}"
         objectType: "secretsmanager"
