--- a/values.yaml
+++ b/values.yaml
@@ -31,3 +31,7 @@ readinessProbe:
     port: 5000
   initialDelaySeconds: 5
   periodSeconds: 10
+
+secret:
+  secretName: tls-secret
+  secretsManagerObjectName: tls-secret
